--- a/packages/SystemUI/res/drawable/floating_action_button.xml
+++ b/packages/SystemUI/res/drawable/floating_action_button.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2015-2016 The SlimRoms Project
+     Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
 
-    <!-- Navigation bar -->
-    <color name="navigationbar_button_default_color">#FFFFFFFF</color>
-
-    <!-- Quick Settings Tuner -->
-    <color name="qs_edit_background_color">#fffafafa</color>
-    <color name="qs_edit_tile_text_color">#ff000000</color>
-    <color name="qs_edit_tile_icon_color">#ff009688</color>
-    <color name="qs_edit_divider_color">#29000000</color>
-
-    <!-- Floating action button -->
-    <color name="fab_color">#ff009688</color>
-    <color name="floating_action_button_icon_color">#ffffff</color>
-
-</resources>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@android:color/white">
+    <shape
+            android:shape="oval">
+        <solid android:color="@color/fab_color"/>
+    </shape>
+</ripple>
