Add persistent notification function for USB OTG drives
This commit allows to enable persistent notifications for USB OTG stirage.

Credits to Temasek

https://github.com/temasek/android_frameworks_base/commit/ff66d59fb288fa5f1950e624068e9d546b3ee511
 Decad3nce committed with temasek on Jun 2

https://github.com/temasek/android_frameworks_base/commit/d6916deb725d4adf3498edf25a4b5bfd709cf8fd
AdrianDC committed with temasek on Jun 28

--- a/core/res/res/values/slim_symbols.xml
+++ b/core/res/res/values/slim_symbols.xml
@@ -50,4 +50,7 @@
     <java-symbol type="string" name="reboot_system" />
     <java-symbol type="string" name="reboot_progress" />
 
+    <!-- Usb drive persistent notification -->
+    <java-symbol type="bool" name="config_persistUsbDriveNotification" />
+
 </resources>
