Allow screen unpinning on devices without navbar
Based on CyanogenMod commit Iedfc08f4d95bbee3c8578c0d2450b90739e63603

https://review.cyanogenmod.org/#/c/122797/

--- a/core/res/res/values/slim_strings.xml
+++ b/core/res/res/values/slim_strings.xml
@@ -118,4 +118,7 @@
     <string name="reboot_system" product="tablet">Reboot tablet</string>
     <string name="reboot_system" product="default">Reboot phone</string>
 
+    <!-- Notify user that they are in Lock-to-app (for devices without navbar) -->
+    <string name="lock_to_app_toast_no_navbar">To unpin this screen, press Home button.</string>
+
 </resources>
