--- a/core/res/res/values/slim_symbols.xml
+++ b/core/res/res/values/slim_symbols.xml
@@ -53,4 +53,7 @@
     <!-- Usb drive persistent notification -->
     <java-symbol type="bool" name="config_persistUsbDriveNotification" />
 
+    <!-- Advanced settings switch -->
+    <java-symbol type="string" name="lock_to_app_toast_no_navbar" />
+
 </resources>
