--- a/packages/DocumentsUI/res/menu/activity.xml
+++ b/packages/DocumentsUI/res/menu/activity.xml
@@ -20,6 +20,11 @@
         android:title="@string/menu_create_dir"
         android:icon="@drawable/ic_menu_new_folder"
         android:showAsAction="always" />
+     <item
+        android:id="@+id/menu_paste"
+        android:title="@android:string/paste"
+        android:icon="@*android:drawable/ic_menu_paste_material"
+        android:showAsAction="always" />
     <item
         android:id="@+id/menu_search"
         android:title="@string/menu_search"
