--- a/packages/DocumentsUI/res/menu/mode_directory.xml
+++ b/packages/DocumentsUI/res/menu/mode_directory.xml
@@ -20,8 +20,18 @@
         android:title="@string/menu_open"
         android:showAsAction="always" />
     <item
+        android:id="@+id/menu_cut"
+        android:icon="@*android:drawable/ic_menu_cut_material"
+        android:title="@android:string/cut"
+        android:showAsAction="always" />
+     <item
+        android:id="@+id/menu_copy"
+        android:icon="@*android:drawable/ic_menu_copy_material"
+        android:title="@android:string/copy"
+        android:showAsAction="always" />
+    <item
         android:id="@+id/menu_share"
-        android:icon="@drawable/ic_menu_share"
+        android:icon="@*android:drawable/ic_menu_share_material"
         android:title="@string/menu_share"
         android:showAsAction="always" />
     <item
