--- a/packages/DocumentsUI/res/menu/mode_directory.xml
+++ b/packages/DocumentsUI/res/menu/mode_directory.xml
@@ -29,6 +29,10 @@
         android:icon="@*android:drawable/ic_menu_copy_material"
         android:title="@android:string/copy"
         android:showAsAction="always" />
+     <item
+        android:id="@+id/menu_copyto"
+        android:title="@string/menu_copy"
+        android:showAsAction="always" />
     <item
         android:id="@+id/menu_share"
         android:icon="@*android:drawable/ic_menu_share_material"
@@ -44,7 +48,7 @@
         android:title="@string/menu_select_all"
         android:showAsAction="never" />
     <item
-        android:id="@+id/menu_copy"
+        android:id="@+id/menu_copyto"
         android:title="@string/menu_copy"
         android:showAsAction="never" />
 </menu>
